tests/data/parseerror/invalid-constant-2.php
<?php

const INVALID_CONSTANT_2 2;
